# linux-exam

./: .clang-format  .dockerignore  CHANGELOG.md  CI_PIPELINE_FIXES.md  DOCKER_E2E_SUMMARY.md  GITHUB_ACTIONS_PRETEST_RESULTS.md  GITHUB_DEPENDENCIES_SATISFIED.md  IMPLEMENTATION_SUMMARY.md  LINUX_EXAM.md  Makefile  PIPELINE_DEBUG_SUMMARY.md  PIPELINE_ENHANCEMENTS_SUMMARY.md  PIPELINE_FAILURES_ANALYSIS.md  PIPELINE_FIX_RESULTS.md  README.md  SECURITY_INTEGRATION_SUMMARY.md
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: README.md  cache-optimization.yml  ci-robust.yml  ci-simple.yml  ci.yml  dependency-verification.yml  docker-e2e-tests.yml  e2e-tests.yml  performance-monitor.yml  pretest-discovery.yml  security-pipeline.yml
docker/: Dockerfile  Dockerfile.dev
docs/: API_REFERENCE.md  CI-ROBUST-WORKFLOW.md  CI_CD_PIPELINE_ANALYSIS_REPORT.md  ENHANCED_TEST_COVERAGE.md  KERNEL_DRIVER.md  PIPELINE_ENHANCEMENT_ANALYSIS_REPORT.md  PIPELINE_FAILURE_ANALYSIS.md  README.md  SECURITY_TESTING_INTEGRATION.md  TESTING.md  TESTING_BEST_PRACTICES.md  TEST_ANALYTICS_SUMMARY.md  TEST_COVERAGE_DASHBOARD.md  github-actions-cache-optimization.md
drivers/: mpu6050_driver.c  mpu6050_main.c
include/: mpu6050.h
memory/agents/: README.md
memory/sessions/: README.md
pipeline/: README.md  package.json
pipeline/.claude-flow/metrics/: performance.json  task-metrics.json
pipeline/.github/workflows/: enhanced-pipeline.yml  main-ci.yml
pipeline/config/: pipeline-config.json
pipeline/docs/: README.md
pipeline/examples/: example-usage.js
pipeline/scripts/: comprehensive-reporter.js  generate-matrix.js  intelligent-test-runner.js  optimize-pipeline.js  pipeline-monitoring.js  pipeline-orchestration.js
pipeline/src/: cache-optimization.js  cicd-pipeline-optimizer.js  parallel-test-executor.js  performance-metrics.js  pipeline-orchestrator.js  resource-optimization.js  test-execution-strategy.js
pipeline/test-suites/: all.json  e2e.json  integration.json  unit.json
pipeline/tests/: orchestrator.test.js
pretest-results/discovery-report-ubuntu-22.04/: discovery-ubuntu-22.04.txt
pretest-results/discovery-report-ubuntu-latest/: discovery-ubuntu-latest.txt
scripts/: build.sh  ci-setup-smart.sh  ci-setup-wrapper.sh  ci-setup.sh  coverage-gate.py  dependency_scan.py  docker-build.sh  fix-pipeline.sh  generate-coverage-badge.py  github-actions-pretest.sh  lint.sh  optimize-ci-cache.sh  optimize-github-cache.sh  run-tests-safe.sh  security_scan.sh  setup-ci-env.sh  setup_analytics.sh  test-runner-smart.sh  test-runner-strict.sh  test-wrapper.sh  test_analytics_integration.py  validate-build.sh  verify-cache-fix.sh
scripts/security/: README.md
src/analytics/: ci_integration.py  performance_analyzer.py  quality_analyzer.py  test_metrics_collector.py
src/dashboard/: dashboard_server.py
tests/: CMakeLists.txt  Makefile  README.md  run_comprehensive_tests.sh  test-discovery.py
tests/.github/workflows/: test.yml
tests/analytics/: test_comprehensive_integration.py
tests/chaos/: chaos_framework.py
tests/coverage/: coverage_analysis.cpp
tests/e2e/: Makefile  README.md  run_e2e_tests.sh  test_mpu6050_e2e  test_mpu6050_e2e.c  test_mpu6050_e2e.py  validate_ranges  validate_ranges.c
tests/e2e/.claude-flow/metrics/: performance.json  task-metrics.json
tests/e2e/docker/: .dockerignore  Dockerfile.e2e  README.md  docker-compose.yml  entrypoint.sh  init-db.sql  run_e2e_docker.sh  test-docker-env.sh
tests/e2e/docker/grafana-dashboards/: dashboard.yml
tests/e2e/docker/grafana-datasources/: datasources.yml
tests/e2e/framework/: Makefile  README.md  __init__.py  main.py  performance.py  pytest.ini  reports.py  requirements.txt  test_config.json  test_framework.py  test_runner.sh  validators.py
tests/e2e/simulator/: Dockerfile.test  Makefile  README.md  SUMMARY.md  i2c_simulator.c  integration_test.sh  main.c  mpu6050_virtual.c  simulator.h  simulator_test  test-docker.sh  test_scenarios.c
tests/e2e/simulator/.claude-flow/metrics/: performance.json  task-metrics.json
tests/environment/: README.md  __init__.py  troubleshoot.py
tests/environment/config/: environment_manager.py  multi_env_config.yaml
tests/environment/consistency/: env_consistency.py
tests/environment/isolation/: test_sandbox.py
tests/environment/monitoring/: env_monitor.py
tests/environment/validation/: dependency_checker.py  env_validator.py
tests/fixtures/: MockSensorData.hpp  generate_test_data.py  mock_sensor_data.h  sensor_data.c  sensor_data.cpp  sensor_data.h  test_config.json
tests/fixtures/tests/fixtures/: ci_config.json  docker_test_config.json  sensor_data.h  test_config.json
tests/integration/: test_mpu6050_integration.cpp
tests/mocks/: mock_i2c.c  mock_i2c.cpp  mock_i2c.h  mock_i2c_c.h
tests/mutation/: mutation_framework.py  test_mutation_detection.cpp
tests/performance/: performance_framework.py  test_performance_stress.cpp
tests/property/: property_framework.py  test_mpu6050_properties.cpp
tests/security/: Makefile  buffer_overflow_tests.c  memory_safety_tests.c  privilege_escalation_tests.c  race_condition_tests.c  security_test_framework.h
tests/unit/: test_main.cpp  test_mpu6050.cpp  test_mpu6050_enhanced.cpp
tests/utils/: performance_monitor.c  performance_monitor.h  performance_test.py  simulator_daemon.py  test_helpers.c  test_helpers.cpp  test_helpers.h  test_helpers_c.h
